# rosa

./: .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  GOVERNANCE.md  INSTRUCTIONS.txt  LICENSE  README-WEBGUI.md  README.md  README_zh.md  SECURITY.md  TESTING.md  demo.sh  memory_to_rosa.py  pyproject.toml  run-agent-en.sh  setup.py  start.sh  test.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish.yml
.tests/: test_ROS_commands.py
.tests/unit/: test_command_execution.py  test_error_handling.py  test_initialization.py
docs/: 규칙-깃허브-운영.md  규칙-에이전트-개발.md
outputs/: persona_A.json  persona_B.json  persona_C.json
src/motion_planner/: CMakeLists.txt  REFACTORING_PLAN.md  package.xml
src/motion_planner/config/: joint_limits.yaml  kinematics_improved.yaml  moveit_controllers_with_gripper.yaml  ompl_planning.yaml  ros2_controllers.yaml  ros2_controllers_with_gripper.yaml  ur5e_rviz.yaml
src/motion_planner/include/motion_planner/: mtc_task_node.hpp  mtc_task_stages.hpp  scene_objects.hpp
src/motion_planner/launch/: mtc_ur5e.launch.py  mtc_ur5e_hande.launch.py  mtc_ur5e_hande_main.launch.py
src/motion_planner/src/: mtc_main.cpp  mtc_task_node.cpp  mtc_task_stages.cpp
src/motion_planner/srdf/: ur5e_hande.srdf  ur5e_robotiq.srdf.xacro  ur5e_with_hande.srdf.xacro
src/motion_planner/srv/: ExecuteAllTasks.srv  ExecuteTask.srv
src/motion_planner/urdf/: simple_lab_env.urdf
src/rosa/: __init__.py  exceptions.py  prompts.py  rosa.py
src/rosa/helpers/: __init__.py  chat_manager.py  component_builder.py  config_validator.py
src/rosa/tools/: __init__.py  calculation.py  log.py  ros1.py  ros2.py  ros2_advanced_control.py  system.py
src/rosa_interface/: .gitignore  package.xml  setup.cfg  setup.py
src/rosa_interface/rosa_interface/: __init__.py  ur5_commander.py
src/turtle_agent/: CMakeLists.txt  package.xml  requirements.txt
src/turtle_agent/config/: static_obstacles_turtlesim.yaml
src/turtle_agent/launch/: agent  agent.launch  korean_agent.launch  web_gui.launch
src/turtle_agent/scripts/: TASK_16.md  action_mapper.py  capture_task16_obstacle_logs.sh  collision_event_sink.py  collision_geometry.py  collision_monitor.py  command_logger.py  help.py  intent_parser.py  korean_turtle_agent.py  llm.py  memory_converter.py  memory_prompting.py  obstacle_store.py  pose_hub.py  pose_logger.py  prompts.py  ros_params.py  static_map_loader.py  static_world.py  turtle_agent.py  turtle_lifecycle.py  web_gui.py  world_builder.py
src/turtle_agent/scripts/memory_modules/: SCHEMA.md  __init__.py  memory_io.py  memory_long_term.py  memory_short_term.py  schema_contracts.py
src/turtle_agent/scripts/tools/: __init__.py  obstacle.py  turtle.py
src/turtle_agent/scripts/web/: app.py
src/turtle_agent/scripts/web/templates/: index.html
src/turtle_agent2/: CMakeLists.txt  package.xml
src/turtle_agent2/scripts/: help.py  llm.py  prompts.py  run_turtle_agent2.sh  turtle_agent2.py
src/turtle_agent2/scripts/tools/: __init__.py  turtle.py
src/turtle_agent2/turtle_agent2/: __init__.py
tests/: __init__.py  test_tool_integration.py
tests/rosa/: test_signal_handling.py
tests/rosa/tools/: test_calculation.py  test_log.py  test_ros1.py  test_ros2.py  test_rosa_tools.py  test_system.py
tests/test_rosa/: test_blacklist_mechanism.py  test_improved_blacklist.py  test_rosa.py  test_rosa_chat_manager.py  test_rosa_cleanup.py  test_rosa_component_builder.py  test_rosa_config_integration.py  test_rosa_config_validator.py  test_rosa_history.py  test_rosa_private_methods.py  test_signal_handling.py
tests/test_rosa/tools/: test_calculation.py  test_log.py  test_ros1.py  test_ros2.py  test_rosa_tools.py  test_system.py
tests/test_turtle_agent/: __init__.py  test_collision_geometry.py  test_collision_monitor.py  test_memory_converter.py  test_memory_prompting.py  test_obstacle_store.py  test_obstacle_tools.py  test_pose_hub.py  test_pose_logger.py  test_query_to_action_pipeline.py  test_static_map_loader.py  test_turtle_lifecycle.py  test_world_builder.py
