[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jpl-rosa"
version = "1.0.8"
description = "ROSA: the Robot Operating System Agent"
readme = "README.md"
authors = [{ name = "Rob Royce", email = "Rob.Royce@jpl.nasa.gov" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["Robotics", "Data Science", "Machine Learning", "Data Engineering", "Data Infrastructure", "Data Analysis"]
requires-python = ">=3.9, <4"
dependencies = [
    "PyYAML==6.0.1",
    "python-dotenv>=1.0.1",
    "langchain~=0.3.23",
    "langchain-community~=0.3.21",
    "langchain-core~=0.3.52",
    "langchain-openai~=0.3.14",
    "langchain-ollama~=0.3.2",
    "pydantic",
    "pyinputplus",
    "azure-identity",
    "cffi",
    "rich",
    "pillow>=10.4.0",
    "numpy>=1.26.4",
]

[project.urls]
"Homepage" = "https://github.com/nasa-jpl/rosa"
"Bug Tracker" = "https://github.com/nasa-jpl/rosa/issues"

[tool.setuptools.packages.find]
where = ["src"]
