[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jpl-rosa"
version = "1.0.8"
description = "ROSA: the Robot Operating System Agent"
readme = "README.md"
authors = [{ name = "Rob Royce", email = "Rob.Royce@jpl.nasa.gov" }]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["Robotics", "Data Science", "Machine Learning", "Data Engineering", "Data Infrastructure", "Data Analysis"]
requires-python = ">=3.9, <4"
dependencies = [
    "PyYAML==6.0.1",
    "python-dotenv>=1.0.1",
    "langchain~=0.3.23",
    "langchain-community~=0.3.21",
    "langchain-core~=0.3.65",
    "langchain-openai~=0.3.14",
    "langchain-ollama~=0.3.2",
    "langchain-anthropic~=0.3.15",
    "pydantic",
    "pyinputplus",
    "azure-identity",
    "cffi",
    "rich",
    "pillow>=10.4.0",
    "numpy>=1.26.4",
]

[project.urls]
"Homepage" = "https://github.com/nasa-jpl/rosa"
"Bug Tracker" = "https://github.com/nasa-jpl/rosa/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9+
target-version = "py39"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "T20", "PIE", "SIM", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
    "T201",  # Allow print statements
    "PLR0913",  # Too many arguments
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["rosa"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert statements in tests

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
